Fixed Java 8 compatibility, added debug logging